Change to register user method

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".Register"/>
         //code snippet added in from facebook developer site
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
