--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
 
         <activity
             android:name=".NavigationActivity"
-            android:label="NavigationActivity" />
+            android:label="NavigationActivity"
+            android:windowSoftInputMode="adjustPan" />
 
         <uses-library android:required="true" android:name="com.google.android.maps" />
 
