--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,11 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.6.2'
     compile 'com.firebaseui:firebase-ui-database:3.1.2'
 
-    //For UI
+    //For Image
     //compile 'com.github.bumptech.glide:glide:4.x'
     // annotationProcessor 'com.github.bumptech.glide:compiler:4.x'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.chrisbanes:PhotoView:2.1.3'
 
     //Google maps
     compile 'com.google.android.gms:play-services-maps:11.6.2'
