--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
+        android:name=".models.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -40,6 +41,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".Register" />
+        <activity
+            android:name=".Chat"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity android:name=".FacebookRegisterActivity"></activity>
+
         //code snippet added in from facebook developer site
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
